Atualizando o projeto com a tela de login

--- a/FRONTEND/src/styles.css
+++ b/FRONTEND/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.form-centralizado {
+  margin-top: 10%;
+  margin-bottom: 15%;
+  height: 70%
+}
