Adicionando a criação de atividades

--- a/FRONTEND/src/app/footer/footer.component.html
+++ b/FRONTEND/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div id="logo" class="footer">
+  <img src="../../assets/imagens/formularios-geral/totvs-logo.png" class="footer-logo">
+</div>
