--- a/FRONTEND/src/styles.css
+++ b/FRONTEND/src/styles.css
@@ -1,5 +1,21 @@
 .form-centralizado {
   margin-top: 10%;
   margin-bottom: 15%;
-  height: 70%
+  height: 70%;
+  background: white;
+  border-width: 0.1em;
+  border-radius: 5%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 6px 6px 10px #999;
+}
+
+.logo {
+  align-items: center;
+  text-align: center;
+}
+
+.form-titulo {
+  text-align: center;
+  margin-bottom: 10%;
 }
